[tool.poetry]
name = "tutorial-gpt"
version = "0.1.0"
description = ""
authors = ["Marek Nevole"]
readme = "README.md"
packages = [{include = "tutorial_gpt"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13"
pytorch-lightning = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79